--- a/bork_z5_2.html
+++ b/bork_z5_2.html
@@ -6,7 +6,7 @@
 <LINK href="bork_z5_2.css" rel="stylesheet" type="text/CSS">
 </head>
 <body bgcolor="silver">
-<p> tutaj wpisz Twoje nazwisko -> zewnętrzne</p>
+<p> Borkowski -> zewnętrzne</p>
  h3 wpisany wielkością standardową
 </body>
 </html>
