--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
 <table width=95% border="1" align="center">
 <tr>
 <td width=18% align=center>
-<a href="http://www.kuratorium.gda.pl" target="strony">Kuratorium</a>
+<a href="bork_z5_1" target="strony">Zad5-importowany</a>
 <br>
-<a href="http://www.wp.pl" target="strony">Portal WP</a>
+<a href="bork_z5_2" target="strony">Zad5-zewnętrzny</a>
     </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
       </td>
-    <td width=18% align=center><a href="start.html" target="strony">Start</a>
+    <td width=18% align=center><a href="bork_z5_1.css" target="strony">Z5_kod-importowany</a>
+    </td>
+     <td width=18% align=center><a href="bork_z5_2.css" target="strony">Z5_kod-zewnętrzny</a>
+    </td>
+     <td width=18% align=center><a href="bork_z5_3.css" target="strony">Z5_kod-importowany</a>
+    </td>
+     <td width=18% align=center><a href="bork_z5_4.css" target="strony">Z5_kod-importowany</a>
     </td>
     </tr>
     </table>
