--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <a href="bork_z5_1" target="strony">Zad5-importowany</a>
 <br>
 <a href="bork_z5_2" target="strony">Zad5-zewnętrzny</a>
+<br>
+<a href="bork_z5_3" target="strony">Zad5-importowany</a>
+<br>
+<a href="bork_z5_4" target="strony">Zad5-zewnętrzny</a>
     </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
       </td>
@@ -16,10 +20,7 @@
     </td>
      <td width=18% align=center><a href="bork_z5_2.css" target="strony">Z5_kod-zewnętrzny</a>
     </td>
-     <td width=18% align=center><a href="bork_z5_3.css" target="strony">Z5_kod-importowany</a>
-    </td>
-     <td width=18% align=center><a href="bork_z5_4.css" target="strony">Z5_kod-importowany</a>
-    </td>
+   
     </tr>
     </table>
       </body>
