--- a/bork_z5_1.html
+++ b/bork_z5_1.html
@@ -8,7 +8,7 @@
 </style>
 </head>
 <body bgcolor="silver">
-<h1> importowany arkusz</h1>
-<H3> h3 wpisany wielkością standardową</H3>
+<p> importowany arkusz</p>
+ h3 wpisany wielkością standardową
 </body>
 </html>
