--- a/bork_z5_3.html
+++ b/bork_z5_3.html
@@ -5,13 +5,12 @@
 <!-- wewnetrzny -->
 <style>
 <p> {
-color: red;
-font-size: 52px;
+color: green;
+font-size: 51px;
 }
 </style>
 </head>
 <body bgcolor="silver">
 <p> Borkowski -> wewnętrzne</p>
- h3 wpisany wielkością standardową
 </body>
 </html>
