--- a/bork_z5_4.html
+++ b/bork_z5_4.html
@@ -5,7 +5,7 @@
 <!-- liniowy -->
 </head>
 <body bgcolor="silver">
-<p style="color: red;font-size: 50 px;"> styl h1 naglówka, wielkość 52 pikseli, czerwony zdefiniowany zewnętrznie</p>
- wpisany wielkością standardową
+<p style="color: green ;font-size: 31 px;"> Borkowski </p>
+
 </body>
 </html>
