--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <table width=95% border="1" align="center">
 <tr>
 <td width=18% align=center>
-<a href="bork_z5_1" target="strony">Zad5-importowany</a>
+<a href="bork_z5_1.html" target="strony">Zad5-importowany</a>
 <br>
-<a href="bork_z5_2" target="strony">Zad5-zewnętrzny</a>
+<a href="bork_z5_2.html" target="strony">Zad5-zewnętrzny</a>
 <br>
-<a href="bork_z5_3" target="strony">Zad5-importowany</a>
+<a href="bork_z5_3.html target="strony">Zad5-importowany</a>
 <br>
-<a href="bork_z5_4" target="strony">Zad5-zewnętrzny</a>
+<a href="bork_z5_4.html" target="strony">Zad5-zewnętrzny</a>
     </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
       </td>
