--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <br>
 <a href="bork_z5_2.html" target="strony">Zad5-zewnętrzny</a>
 <br>
-<a href="bork_z5_3.html target="strony">Zad5-importowany</a>
+<a href="bork_z5_3.html target="strony">Zad5-wewnętrzny</a>
 <br>
-<a href="bork_z5_4.html" target="strony">Zad5-zewnętrzny</a>
+<a href="bork_z5_4.html" target="strony">Zad5-liniowy</a>
     </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
       </td>
