--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
       </td>
-    <td width=18% align=center><a href="bork_z5_1.css" target="strony">Z5_kod-importowany</a>
-    </td>
+    <td width=18% align=center><a href="bork_z5_1.css" target="strony">Z5_kod-importowany</a><br>
      <td width=18% align=center><a href="bork_z5_2.css" target="strony">Z5_kod-zewnętrzny</a>
     </td>
    
