--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <a href="bork_z5_4.html" target="strony">Zad5-liniowy</a>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
-      </td>
-<td width=18% align=center><a href="bork_z5_1.css" target="strony">Z5_kod-importowany</a><br>
+
+<a href="bork_z5_1.css" target="strony">Z5_kod-importowany</a>
         
-<td width=18% align=center><a href="bork_z5_2.css" target="strony">Z5_kod-zewnętrzny</a><br>
+<a href="bork_z5_2.css" target="strony">Z5_kod-zewnętrzny</a>
 
-<td width=18% align=center><a href="bork_z5_3.css" target="strony">Z5_kod-wewnętrzny</a><br>
+<a href="bork_z5_3.css" target="strony">Z5_kod-wewnętrzny</a>
 
-<td width=18% align=center><a href="bork_z5_4.css" target="strony">Z5_kod-liniowy</a><br>
+<a href="bork_z5_4.css" target="strony">Z5_kod-liniowy</a>
     </td>
    
     </tr>
