--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <a href="bork_z5_4.html" target="strony">Zad5-liniowy</a>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
+        
+<a href="start.html" target="strony">Start</a>
 
 <a href="bork_z5_1.css" target="strony">Z5_kod-importowany</a>
         
