--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
-<a href="start.html" target="strony">Start</a>
-
-<a href="bork_z5_1.css" target="strony">Z5_kod-importowany</a>
-        
-<a href="bork_z5_2.css" target="strony">Z5_kod-zewnętrzny</a>
-
-<a href="bork_z5_3.css" target="strony">Z5_kod-wewnętrzny</a>
-
-<a href="bork_z5_4.css" target="strony">Z5_kod-liniowy</a>
-    </td>
-   
+<td width=18% align=center><a href="start.html" target="strony">Start</a>
+ </td>
+        <td width=18% align=center><a href="bork_z5_1.css" target="strony">Z5_kod_importowany</a>
+ </td>
+        <td width=18% align=center><a href="bork_z5_2.css" target="strony">Z5_kod_zewnętrzny</a>
+ </td>
+        <td width=18% align=center><a href="bork_z5_3.css" target="strony">Z5_kod_wewnętrzny</a>
+ </td>
+        <td width=18% align=center><a href="bork_z5_4.css" target="strony">Z5_kod_liniowy</a>
+ </td>
     </tr>
     </table>
       </body>
