--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
 <td width=18% align=center><a href="start.html" target="strony">Start</a>
- </td>
-        <td width=18% align=center><a href="bork_z5_1.css" target="strony">Z5_kod_importowany</a>
-         
-         <td width=18% align=center><a href="bork_z5_2.css" target="strony">Z5_kod_zewnętrzny</a>
 
-        <td width=18% align=center><a href="bork_z5_3.css" target="strony">Z5_kod_wewnętrzny</a>
+        <a href="bork_z5_1.css" target="strony">Z5_kod_importowany</a>
+         <a href="bork_z5_2.css" target="strony">Z5_kod_zewnętrzny</a>
 
-  <td width=18% align=center><a href="bork_z5_4.css" target="strony">Z5_kod_liniowy</a>
+       ><a href="bork_z5_3.css" target="strony">Z5_kod_wewnętrzny</a>
 
+ <a href="bork_z5_4.css" target="strony">Z5_kod_liniowy</a>
+</td>
     </tr>
     </table>
       </body>
