--- a/bork_z6.html
+++ b/bork_z6.html
@@ -8,7 +8,13 @@
  </style>
 </head>
 <body bgcolor="silver">
- <h1> importowany arkusz</h1>
- <H3> h3 wpisany wielkością standardową</H3>
+ 
+<p> :D duże szczęście </p>
+ >:( złość
+<p> :> mały uśmieszek </p>
+ :I obojętnosć 
+ <p> B) uśmiech z okularami </p>
+ :( smutek
+ 
  </body>
 </html>
