--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <a href="bork_z5_3.html" target="strony">Zad5-wewnętrzny</a>
 <br>
 <a href="bork_z5_4.html" target="strony">Zad5-liniowy</a>
+<br>
+<a href="bork_z6.html" target="strony">Zad6 </a>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
@@ -25,6 +27,8 @@
 <a href="bork_z5_3.css" target="strony">Z5_kod_wewnętrzny</a>
 
 <a href="bork_z5_4.css" target="strony">Z5_kod_liniowy</a>
+
+<a href="bork_z6.css" target="strony">Z6</a>
         
 </td>
     </tr>
