--- a/bork_z6.html
+++ b/bork_z6.html
@@ -2,19 +2,16 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<!-- importowany -->
- <style>
 
- </style>
+
 </head>
-<body bgcolor="silver">
- 
+<body>
 <p> :D duże szczęście </p>
- >:( złość
+  >:( złość
 <p> :> mały uśmieszek </p>
- :I obojętnosć 
+  :I obojętnosć 
  <p> B) uśmiech z okularami </p>
- :( smutek
+  :( smutek
  
  </body>
 </html>
