--- a/bork_z6.html
+++ b/bork_z6.html
@@ -3,7 +3,9 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-
+<LINK href="bork_z6.css" rel="stylesheet"
+type="text/CSS">
+  
 </head>
 <body>
 <p> :D duże szczęście </p>
