--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <a href="bork_z5_4.html" target="strony">Zad5-liniowy</a>
 <br>
 <a href="bork_z6.html" target="strony">Zad6 </a>
+<br>
+<a href="bork_z13.html" target="strony">Zad13 </a>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
@@ -29,6 +31,8 @@
 <a href="bork_z5_4.css" target="strony">Z5_kod_liniowy</a>
 <br>
 <a href="bork_z6.css" target="strony">Z6</a>
+<br>
+<a href="bork_z13.css" target="strony">Z13</a>
         
 </td>
     </tr>
