--- a/bork_z8.html
+++ b/bork_z8.html
@@ -13,6 +13,13 @@
 <body>
 	<ol>
 <li>) gdzie jest wstawiany? </li>
+<font face="Arial"> Najczęściej wstawiany w nagłówkach dokumentu </font>
+<li>) składnia teorytyczna </li>
+
+<li>) Jakie mogą być selektory?</li>
+<font face="Arial"> Selektorem może być praktycznie dowolny znacznik </font>
+<li>) Jakie mogą być cechy i wartości? </li>
+<font face="Arial"> Jako cecha należy wpisać o jakie konkretnie atrybuty nam chodzi. A wartość to wpisujemy dokładną wartość atrybutu </font>
 </ol>
 </body>
 
