--- a/bork_z8.html
+++ b/bork_z8.html
@@ -15,7 +15,19 @@
 <li>) gdzie jest wstawiany? </li>
 <font face="Arial"> Najczęściej wstawiany w nagłówkach dokumentu </font>
 <li>) składnia teorytyczna </li>
-
+<frameset>
+<head>
+      (...)
+ <style type="text/css">
+ /* <![CDATA[ */
+     selektor1 { cecha: wartość; cecha2: wartość2... }
+     selektor2 { cecha: wartość; cecha2: wartość2... }
+     (...)
+ /* ]]> */
+ </style>
+      (...)
+</head>
+</frameset>
 <li>) Jakie mogą być selektory?</li>
 <font face="Arial"> Selektorem może być praktycznie dowolny znacznik </font>
 <li>) Jakie mogą być cechy i wartości? </li>
