--- a/bork_z8.html
+++ b/bork_z8.html
@@ -15,8 +15,9 @@
 <li>) gdzie jest wstawiany? </li>
 <font face="Arial"> Najczęściej wstawiany w nagłówkach dokumentu </font>
 <li>) składnia teorytyczna </li>
-<frameset>
-<head>
+
+<head> 
+NIE WSTAWIAJCIE TEGO DO SIEBIE BO ZLE JEST  NIE WSTAWIAJCIE TEGO DO SIEBIE BO ZLE JEST  NIE WSTAWIAJCIE TEGO DO SIEBIE BO ZLE JEST 
       (...)
  <style type="text/css">
  /* <![CDATA[ */
@@ -25,9 +26,10 @@
      (...)
  /* ]]> */
  </style>
-      (...)
+    
 </head>
 </frameset>
+NIE WSTAWIAJCIE TEGO DO SIEBIE BO ZLE JEST  NIE WSTAWIAJCIE TEGO DO SIEBIE BO ZLE JEST  NIE WSTAWIAJCIE TEGO DO SIEBIE BO ZLE JEST 
 <li>) Jakie mogą być selektory?</li>
 <font face="Arial"> Selektorem może być praktycznie dowolny znacznik </font>
 <li>) Jakie mogą być cechy i wartości? </li>
