--- a/bork_z8.html
+++ b/bork_z8.html
@@ -16,20 +16,22 @@
 <font face="Arial"> Najczęściej wstawiany w nagłówkach dokumentu </font>
 <li>) składnia teorytyczna </li>
 
-<head> 
-NIE WSTAWIAJCIE TEGO DO SIEBIE BO ZLE JEST  NIE WSTAWIAJCIE TEGO DO SIEBIE BO ZLE JEST  NIE WSTAWIAJCIE TEGO DO SIEBIE BO ZLE JEST 
-      (...)
+<frameset>
+<frame>
+<head>
+     (...)
  <style type="text/css">
  /* <![CDATA[ */
-     selektor1 { cecha: wartość; cecha2: wartość2... }
-     selektor2 { cecha: wartość; cecha2: wartość2... }
+        selektor1 { cecha: wartość; cecha2: wartość2... }
+        selektor2 { cecha: wartość; cecha2: wartość2... }
      (...)
  /* ]]> */
  </style>
-    
+     (...)
 </head>
+
+
 </frameset>
-NIE WSTAWIAJCIE TEGO DO SIEBIE BO ZLE JEST  NIE WSTAWIAJCIE TEGO DO SIEBIE BO ZLE JEST  NIE WSTAWIAJCIE TEGO DO SIEBIE BO ZLE JEST 
 <li>) Jakie mogą być selektory?</li>
 <font face="Arial"> Selektorem może być praktycznie dowolny znacznik </font>
 <li>) Jakie mogą być cechy i wartości? </li>
