--- a/bork_z8.html
+++ b/bork_z8.html
@@ -16,8 +16,9 @@
 <font face="Arial"> Najczęściej wstawiany w nagłówkach dokumentu </font>
 <li>) składnia teorytyczna </li>
 
-<frameset>
-<frame>
+<table width=45% border="1" align="center">
+<tr>
+<td colspan="3">
 <head>
      (...)
  <style type="text/css">
@@ -29,9 +30,11 @@
  </style>
      (...)
 </head>
+</td>
+</tr>
+</table>
 
 
-</frameset>
 <li>) Jakie mogą być selektory?</li>
 <font face="Arial"> Selektorem może być praktycznie dowolny znacznik </font>
 <li>) Jakie mogą być cechy i wartości? </li>
