--- a/bork_z8.html
+++ b/bork_z8.html
@@ -19,8 +19,9 @@
 <table width=100% border="1" align="center">
 <tr>
 <td colspan="3">
-
-     (...)
+	
+<head>
+    <h1>
  <style type="text/css">
  /* <![CDATA[ */
         selektor1 { cecha: wartość; cecha2: wartość2... }
@@ -28,8 +29,9 @@
      (...)
  /* ]]> */
  </style>
-     (...)
-
+   </h1>
+</head>
+	
 </td>
 </tr>
 </table>
