--- a/bork_z8.html
+++ b/bork_z8.html
@@ -16,10 +16,8 @@
 <font face="Arial"> Najczęściej wstawiany w nagłówkach dokumentu </font>
 <li>) składnia teorytyczna </li>
 
-<table width=100% border="1" align="center">
-<tr>
-<td colspan="1">
-	
+
+<fieldset>	
 <head>
     <h1>
  <style type="text/css">
@@ -31,10 +29,8 @@
  </style>
    </h1>
 </head>
-	
-</td>
-</tr>
-</table>
+</fieldset>
+
 
 
 <li>) Jakie mogą być selektory?</li>
