--- a/bork_z8.html
+++ b/bork_z8.html
@@ -18,6 +18,7 @@
 
 
 <fieldset>	
+<iframe scrolling="yes">
 <head>
     <h1>
  <style type="text/css">
@@ -29,6 +30,7 @@
  </style>
    </h1>
 </head>
+</iframe>
 </fieldset>
 
 
