--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <br>
 <a href="bork_z6.html" target="strony">Zad6 </a>
 <br>
+<a href="bork_z7.html" target="strony">Zad7 </a>
+<br>
 <a href="bork_z8.html" target="strony">Zad8 </a>
 <br>
 <a href="bork_z13.html" target="strony">Zad13 </a>
