--- a/bork_z7.html
+++ b/bork_z7.html
@@ -11,7 +11,7 @@
 <font face="Arial"> Styl lokalny to może być dowolny znacznik. Elementom znajdującym się miedzy tymi znacznikami nadajemy atrybuty formatowania </font>
   
 <li>. Składnia teoretyczna. </li>
-<td> <selektor style="cecha1: wartość1; cecha2: wartość2...">...</selektor> </td>
+<tr><td> <selektor style="cecha1: wartość1; cecha2: wartość2...">...</selektor> </td></tr>
   
 <li>. Co może być selektorem? </li>
 <font face="Arial"> Selektorem może być dowolny znacznik np p, h1, td i inne.</font>
