--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <table width=95% border="1" align="center">
 <tr>
 <td width=18% align=center>
+<a href="bork_z2.html" target="strony">Zad2</a>
+<br>
+<a href="bork_z3.html" target="strony">Zad3</a>
+<br>
 <a href="bork_z5_1.html" target="strony">Zad5-importowany</a>
 <br>
 <a href="bork_z5_2.html" target="strony">Zad5-zewnętrzny</a>
