--- a/bork_z3.html
+++ b/bork_z3.html
@@ -12,7 +12,7 @@
 <h1> CSS </h1><h3> rozdzielenie struktury i prezentacji dokumentów czyli: wszystkie polecenia dotyczące formatowania można umieścić w jednym miejscu (tzw. arkuszu) i powiązać je z konkretnymi elementami, wstawionymi za pomocą czystego (X)HTML. Taki sposób sprawia, że modyfikacja wyglądu stron może przebiegać dużo sprawniej. </h3><br>
 
 
-Nowe możliwości CSS
+<h1>Nowe możliwości CSS</h1>
 <li>Przestarzałe atrybuty i znaczniki, znajdujące się bezpośrednio w składni HTML, które dotyczą formatowania (elementy zdeprecjonowane), będą stopniowo wycofywane przez producentów przeglądarek internetowych, na rzecz rekomendowanych analogicznych deklaracji CSS. </li>
 <li> Dokumenty pisane z wykorzystaniem arkuszy stylów są zwykle bardziej przejrzyste i krótsze.</li>
 <li> Style pozwalają w łatwy sposób zarządzać całą serią dokumentów, poprzez stosowanie  zewnętrznych arkuszy stylów.</li>
@@ -25,7 +25,7 @@ Nowe możliwości CSS
 
 
 
-Wady CSS.
+<h1>Wady CSS.</h1>
 <ol type="I">
 <li> złożona specyfikacja (składnia) nietolerująca, rzadnych błędów składniowych, </li>
 <li> brak sygnalizacji błędów podczas wykonywania styli CSS oraz podczas ich realizacji, </li>
