--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <br>
 <a href="bork_z3.html" target="strony">Zad3</a>
 <br>
+<a href="bork_z4.html" target="strony">Zad4</a>
+<br>
 <a href="bork_z5_1.html" target="strony">Zad5-importowany</a>
 <br>
 <a href="bork_z5_2.html" target="strony">Zad5-zewnętrzny</a>
