--- a/bork_z11.html
+++ b/bork_z11.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <title>Rodzaje selektorów</title>
+</head>
+<body>
 
+  
+
+</body>
+</html>
