--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 <br>
 <a href="bork_z8.html" target="strony">Zad8 </a>
 <br>
+<a href="bork_z11.html" target="strony">Zad11 </a>
+<br>
 <a href="bork_z13.html" target="strony">Zad13 </a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
