--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 <br>
 <a href="bork_z11.html" target="strony">Zad11 </a>
 <br>
+<a href="bork_z12.html" target="strony">Zad12 </a>
+<br>
 <a href="bork_z13.html" target="strony">Zad13 </a>
 <br>
 </td>
