--- a/bork_z12.html
+++ b/bork_z12.html
@@ -7,18 +7,18 @@
 <body>
     <h1><b>Jednoski miar.</b></h1>
 
-  <b><u> Jednoski miar bezwzględnych w CSS </u></b>
- pt - punkty (1 pkt 1/72 cala)
- pc - pica ( 1 pica=12 punktów)
- mm - milimetry
- cm -centrymetry
+  <b><u> Jednoski miar bezwzględnych w CSS </u></b><br>
+ pt - punkty (1 pkt 1/72 cala)<br>
+ pc - pica ( 1 pica=12 punktów)<br>
+ mm - milimetry<br>
+ cm -centrymetry<br>
  in - cale
-
-  <b><u> Jednoski miar względnych w CSS</u></b>
-  em -jednostka odpowiadająca aktualnej czcionce
- ex - wielkość zbliżona do wysokości litery "x"
- px - piksel, jednostki względna, gdyż zależna od rozdzielczości monitora
+<br>
+  <b><u> Jednoski miar względnych w CSS</u></b><br>
+  em -jednostka odpowiadająca aktualnej czcionce<br>
+ ex - wielkość zbliżona do wysokości litery "x"<br>
+ px - piksel, jednostki względna, gdyż zależna od rozdzielczości monitora<br>
  % - wartości procentowe
-
+<br>
 </body>
 </html>
