--- a/bork_z14.html
+++ b/bork_z14.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Określanie kolorów.</title>
+<style>
+td{
+    border: 1px solid black;
+}
+ </style>
 </head>
 <body>
-a)określanie z użyciem definicji heksadecymalnych
-DIV {color:#FFFFFF;}
+
+<table> 
+<tr>
+<td>a)określanie z użyciem definicji heksadecymalnych DIV {color:#FFFFFF;}</td>
+</tr>
 b)określanie z użyciem definicji RGB
 DIV {color: rgb(255,100,13);} 
 liczby od 0 do 255 dla kolorów czerwony, zielony, niebieski, 
@@ -15,6 +23,6 @@ DIV {color:red;}
 d)określanie z użyciem definicji RGB oraz nasycenia kolorów
 DIV {color: rgb(10%,40%,78%);} procentowe nasycenie obrazu od 0% do 100%
 
-
+</table>
 </body>
 </html>
