--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 <br>
 <a href="bork_z13.html" target="strony">Zad13 </a>
 <br>
+<a href="bork_z14.html" target="strony">Zad14 </a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
