--- a/bork_z8.html
+++ b/bork_z8.html
@@ -5,9 +5,10 @@
 
 	<meta charset="UTF-8">
 	
-
-
-
+<style>
+td{
+border: 1px solid black;
+</style>
 </head>
 
 <body>
@@ -17,8 +18,9 @@
 <li>) składnia teorytyczna </li>
 
 
-<fieldset>	
-<iframe scrolling="yes">
+<table>
+<tr>
+<td>
 <head>
     <h1>
  <style type="text/css">
@@ -30,8 +32,9 @@
  </style>
    </h1>
 </head>
-</iframe>
-</fieldset>
+</td>
+</tr>
+</table>
 
 
 
