--- a/bork_z11.html
+++ b/bork_z11.html
@@ -5,8 +5,20 @@
     <title>Rodzaje selektorów</title>
 </head>
 <body>
+<UL>
 
-  
-
+<LI> <h1> Pierwszy sposób podłączania styli do strony. </h1>
+  <UL>
+      <LI> Zewnętrzny arkusz stylów 
+  </UL>
+    <LI> <h1> Drugi sposób podłączania styli do strony </h1>
+        <UL>
+            <LI> Styl wpisany (styl lokalny, liniowy, linijkowy. Dopisanie arkusza do wybranego bloku. 
+        </UL>
+<li> <h1> Trzeci sposób podłączania styli do strony </h1>
+    <UL>
+        <LI> Wewnętrzny arkusz stylów 
+    </UL>
+</UL>  
 </body>
 </html>
