--- a/bork_z15.html
+++ b/bork_z15.html
@@ -1,1 +1,19 @@
+<html>
+<head>
 
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+<LINK href="bork_z15.css" rel="stylesheet"
+type="text/CSS">
+  
+</head>
+<body bgcolor="white">
+<p> :D duże szczęście </p>
+  >:( złość
+<p> :> mały uśmieszek </p>
+  :I obojętnosć 
+ <p> B) uśmiech z okularami </p>
+  :( smutek
+ 
+ </body>
+</html>
