--- a/bork_z11.html
+++ b/bork_z11.html
@@ -19,6 +19,10 @@
     <UL>
         <LI> Wewnętrzny arkusz stylów 
     </UL>
+    <li> <H1> 4 sposób podłączania styli do strony </H1>
+        <ul>
+            <li>Import arkusza stylów
+        </UL>
 </UL>  
 </body>
 </html>
