--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 <br>
 <a href="bork_z8.html" target="strony">Zad8 </a>
 <br>
+<a href="bork_z9.html" target="strony">Zad9 </a>
+<br>
+<a href="bork_z10.html" target="strony">Zad10 </a>
+<br>
 <a href="bork_z11.html" target="strony">Zad11 </a>
 <br>
 <a href="bork_z12.html" target="strony">Zad12 </a>
@@ -33,6 +37,8 @@
 <a href="bork_z13.html" target="strony">Zad13 </a>
 <br>
 <a href="bork_z14.html" target="strony">Zad14 </a>
+<br>
+<a href="bork_z15.html" target="strony">Zad15 </a>
 <br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
@@ -50,7 +56,8 @@
 <a href="bork_z6.css" target="strony">Z6</a>
 <br>
 <a href="bork_z13.css" target="strony">Z13</a>
-        
+<br>
+<a href="bork_z15.css" target="strony">Z15</a>
 </td>
     </tr>
     </table>
