--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
 <td width=18% align=center><a href="start.html" target="strony">Start</a>
+
+<a href="start.html" target="strony">Start</a>
         
 <a href="bork_z5_1.css" target="strony">Z5_kod_importowany</a>
         
