--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <br>
 <a href="bork_z6.css" target="strony">Z6</a>
 <br>
-<a href="bork_z13.css" target="strony">Z13</a>
+<a href="kod_13.html" target="strony">Z13</a>
 <br>
 <a href="bork_z15.css" target="strony">Z15</a>
 </td>
