--- a/bork_z15.html
+++ b/bork_z15.html
@@ -5,7 +5,9 @@
 
 <LINK href="bork_z15.css" rel="stylesheet"
 type="text/CSS">
-  
+  <textarea>
+<h1> KOD HTML </h1>
+
 </head>
 <body bgcolor="white">
 <p> :D duże szczęście </p>
@@ -14,6 +16,23 @@ type="text/CSS">
   :I obojętnosć 
  <p> B) uśmiech z okularami </p>
   :( smutek
- 
- </body>
+  </textarea>
+
+<textarea>
+
+<h1> KOD CSS </h1>
+body {
+color: rgb(50%,37%,80%)
+font-size: 30pt;
+}
+
+p {
+color:
+  #67AF5E;
+font-size: 20pt;
+}
+
+</textarea>
+
+   </body>
 </html>
