--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <br>
 <a href="kod_13.html" target="strony">Z13</a>
 <br>
-<a href="bork_z15.css" target="strony">Z15</a>
+<a href="kod_15.html" target="strony">Z15</a>
 </td>
     </tr>
     </table>
