--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 <br>
 <a href="bork_z15.html" target="strony">Zad15 </a>
 <br>
+<a href="z17_p1_bork.html" target="strony">Zad17_p1 </a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
