--- a/z17_p1_bork.html
+++ b/z17_p1_bork.html
@@ -1,7 +1,10 @@
 <html>
 <head>
+<h1> KOD HTML </h1>
+<textarea>
 <title>Borkowski</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+ <LINK href="z17_p1_bork.css" rel="stylesheet" type="text/CSS">
 </head>
 <body bgcolor="red">
  <div> <!-- początek bloku DIV -->
@@ -12,6 +15,27 @@
  styl wpisany wielkosc 25 pikseli</span> <br>
  <span>styl wpisany wielością standardową-->span</span>
  </div> <!-- koniec bloku DIV -->
+ </textarea>
+
+
+
+<h1> KOD CSS </h1>
+<textarea>
+ body {
+background-color:red;
+}
+
+p {
+color: black;
+font-size: 40px;
+font-family: Arial,Helvetica,sans-serif;
+}
+
+span {
+font-size:25px;
+font-family: Arial,Helvetica,sans-serif;
+color:black;
+ </textarea>
 </body>
 </html>
 <!-- Borkowski -->
