--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 <a href="kod_13.html" target="strony">Z13</a>
 <br>
 <a href="kod_15.html" target="strony">Z15</a>
+<br>
+<a href="z17_p1_kod_bork.html" target="strony">Z17_p1</a>
 </td>
     </tr>
     </table>
