--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 <br>
 <a href="z17_p1_bork.html" target="strony">Zad17_p1 </a>
 <br>
+<a href="z17_p2_bork.html" target="strony">Zad17_p2 </a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
@@ -62,6 +64,8 @@
 <a href="kod_15.html" target="strony">Z15</a>
 <br>
 <a href="z17_p1_kod_bork.html" target="strony">Z17_p1</a>
+<br>
+<a href="z17_p2_kod_bork.html" target="strony">Z17_p2</a>
 </td>
     </tr>
     </table>
