--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 <br>
 <a href="z17_p2_bork.html" target="strony">Zad17_p2 </a>
 <br>
+<a href="z18_bork.html" target="strony">Zad18 </a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
