--- a/z18_bork.html
+++ b/z18_bork.html
@@ -5,9 +5,10 @@
  </span> 
  <br />
  <span style="font-size: 1.1cm;font-family: Times New Roman;">
- <b><u> Element blokowy (DIV)</u> </b> jest elementem blokowym może zawierać 
+ <span style="color: maroon"> <b><u> Element blokowy (DIV)</u> </b> jest elementem blokowym może zawierać 
 wewnątrz siebie zwykły tekst, jak również inne elementy blokowe. Został on 
-pomyślany do tworzenia obszerniejszych struktur. 
+pomyślany do tworzenia obszerniejszych struktur.
+ </span>
  </span>
  <span style="font-family: Arial, Helvetica, sans-serif; font-size: 0.7mm;"> <br />
  Zastosowanie DIV
