--- a/z18_bork.html
+++ b/z18_bork.html
@@ -5,18 +5,19 @@
  </span> 
  <br />
  <span style="font-size: 1.1cm;font-family: Times New Roman;">
- <span style="color: maroon"> <b><u> Element blokowy (DIV)</u> </b> jest elementem blokowym może zawierać 
+  <b><u> Element blokowy (DIV)</u> </b> jest elementem blokowym może zawierać 
 wewnątrz siebie zwykły tekst, jak również inne elementy blokowe. Został on 
 pomyślany do tworzenia obszerniejszych struktur.
- </span>
  </span>
  <span style="font-family: Arial, Helvetica, sans-serif; font-size: 0.7mm;"> <br />
  Zastosowanie DIV
  <ul type="square">
  <li> 
+  <span style="color: maroon">
  Z div'a powinno się korzystać kiedy potrzebujemy wyodrębnić poszczególne 
 bloki w układzie dokumentu, na przykład lewa kolumna, menu nawigacyjne, 
 stopka.
+  </span>
  </li>
  <li>Służy do utworzenia sekcji (bloku) w pliku HTML w celu ich sformatowania za 
 pomocą arkusza stylów CSS.</li>
