--- a/z18_bork.html
+++ b/z18_bork.html
@@ -13,7 +13,7 @@ pomyślany do tworzenia obszerniejszych struktur.
  Zastosowanie DIV
  <ul type="square">
  <li> 
-  <span style="color: maroon">
+  <span style="color: purple">
  Z div'a powinno się korzystać kiedy potrzebujemy wyodrębnić poszczególne 
 bloki w układzie dokumentu, na przykład lewa kolumna, menu nawigacyjne, 
 stopka.
