--- a/z18_bork.html
+++ b/z18_bork.html
@@ -24,4 +24,25 @@ pomocą arkusza stylów CSS.</li>
  </ul>
  </span>
  </div> 
-<!-- koniec bloku DIV 
+<!-- koniec bloku DIV 1 --!>
+
+
+<div style="background-color: red; width: 1081px"> 
+ <span style="color: silver;font-size: 1cm;font-family: Arial;"> 
+ Znacznik DIV (blok 1)-->24.04.24 8:40.
+ </span> 
+ <br/>
+ <span style="font-family: Arial, Helvetica, sans-serif; font-size: 8mm;"> <br />
+
+ <ul type="square">
+ <span style="color: purple">
+ <li> 
+ <b><u>Elementy wyświetlanie w linii (SPAN)</u></b> jest elementem liniowym nie mogą zawierać 
+elementów blokowych, ale mogą inne elementy wyświetlane w linii oraz zwykły tekst.
+ </li>
+  <li> Jeśli chcemy w paragrafie część tekstu wyróżnić czerwonym kolorem, do wyodrębnienia tego tekstu nie możemy użyć elementu div (paragraf <p> z zasady nie może zawierać elementów blokowych) tylko span. Wewnątrz DIV można oczywiście wpisać również SPAN.</li>
+  </span>
+
+ </ul>
+ </span>
+ </div> 
