--- a/z18_bork.html
+++ b/z18_bork.html
@@ -29,12 +29,12 @@ pomocą arkusza stylów CSS.</li>
 
 <div style="background-color: red; width: 1081px"> 
  <span style="color: silver;font-size: 1cm;font-family: Arial;"> 
- Znacznik DIV (blok 2)-->24.04.24 8:40.
+ Znacznik SPAN (blok 2)-->24.04.24 8:40.
  </span> 
  <br/>
  <span style="font-family: Arial, Helvetica, sans-serif; font-size: 8mm;"> <br />
 
- <ul type="square">
+ <ul type="disc">
  <span style="color: purple">
  <li> 
  <b><u>Elementy wyświetlanie w linii (SPAN)</u></b> jest elementem liniowym nie mogą zawierać 
@@ -46,3 +46,33 @@ elementów blokowych, ale mogą inne elementy wyświetlane w linii oraz zwykły 
  </ul>
  </span>
  </div> 
+
+
+<div style="background-color: maroon; width: 1181px"> 
+ <span style="color: silver ;font-size: 9mm;font-family: Arial;"> 
+ Różnica między znacznikami DIV i SPAN (blok 3)--> 2F
+ </span> 
+ <br/>
+ <span style="font-family: Arial, Helvetica, sans-serif; font-size: 7mm;"> <br />
+
+ <ul type="circle">
+ <span style="color: red">
+ <li> 
+<b><u>Span'em wyodrębniamy elementy liniowe</u></b> (najczęściej fragmenty tekstu) a <u><b>divem blokowe</u></b>
+(blokowe elementy, większe fragmenty struktury składające się na układ strony)
+ </li>
+  <li>Dodatkowo DIV domyślnie jest wyświetlany w bloku. Natomiast SPAN w linii.</li>
+  </span>
+
+ </ul>
+ </span>
+ </div> 
+
+
+
+
+
+
+
+
+
