--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
 <a href="z17_p1_kod_bork.html" target="strony">Z17_p1</a>
 <br>
 <a href="z17_p2_kod_bork.html" target="strony">Z17_p2</a>
+<br>
+<a href="z18_kod_bork.html" target="strony">Z18</a>
+
+
 </td>
     </tr>
     </table>
