--- a/z19_bork.html
+++ b/z19_bork.html
@@ -1,5 +1,6 @@
+ <LINK href="z19_bork.css" rel="stylesheet" type="text/CSS">
 <div style="background-color: silver">
- <span style="color: yellow; font-size: 25mm;">
+<span style="color: green; font-size: 25mm;">
  <b>To jest pogrubienie w ramach DIV oraz SPAN i dlatego jest czerwone na żółtym tle</b>,
  a to jest zwykły tekst - również wewnątrz DIV i SPAN.
  </span>
@@ -7,7 +8,7 @@ To jest zwykły tekst, ale tylko wewnątrz DIV - dlatego nie jest czerwony, ale 
  <p>A to jest akapit (element blokowy) w ramach DIV.</p>
 </div>
 
-<span style="color: yellow; font-size: 25mm;">
+<span style="color: green; font-size: 25mm;">
  <b>To jest pogrubienie (element wyświetlany w linii) w ramach SPAN</b>,
  a to jest zwykły tekst - również wewnątrz span.
 </span>
