--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 <br>
 <a href="z18_bork.html" target="strony">Zad18 </a>
 <br>
+<a href="z19_bork.html" target="strony">Zad19 </a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
