--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 <br>
 <a href="z19_bork.html" target="strony">Zad19 </a>
 <br>
+    <a href="z19_bork.html" target="strony">Zad19 </a>
+<br>
+    <a href="z19_bork.html" target="strony">Zad19 </a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
