--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 <br>
 <a href="bork_z15.html" target="strony">Zad15 </a>
 <br>
+<a href="z16_bork.html" target="strony">Zad16 </a>
+<br>
 <a href="z17_p1_bork.html" target="strony">Zad17_p1 </a>
 <br>
 <a href="z17_p2_bork.html" target="strony">Zad17_p2 </a>
@@ -66,6 +68,8 @@
 <a href="kod_13.html" target="strony">Z13</a>
 <br>
 <a href="kod_15.html" target="strony">Z15</a>
+<br>
+<a href="z16_kod_bork.html" target="strony">Z16</a>
 <br>
 <a href="z17_p1_kod_bork.html" target="strony">Z17_p1</a>
 <br>
