--- a/z19_bork.html
+++ b/z19_bork.html
@@ -1,5 +1,14 @@
- <LINK href="z19_bork.css" rel="stylesheet" type="text/CSS">
-<div><span>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+
+
+<LINK href="z19_bork.css" rel="stylesheet" type="text/CSS">
+</head>
+<body>
+ <div style="background-color: silver"> 
+<span>
  <b>To jest pogrubienie w ramach DIV oraz SPAN i dlatego jest czerwone na żółtym tle</b>,
  a to jest zwykły tekst - również wewnątrz DIV i SPAN.
  </span>
@@ -13,7 +22,11 @@ To jest zwykły tekst, ale tylko wewnątrz DIV - dlatego nie jest czerwony, ale 
 </span>
 
 <ol>
-<li style="color: red; "><span style="color: black; ">Punkt pierwszy</span></li>
-<li style="color: green; "><span style="color: black; ">Punkt drugi</span></li>
-<li style="color: blue; "><span style="color: black; ">Punkt trzeci</span></li>
+<li style="color: rgb(228,172,76); "><span style="color: rgb(228,172,76); ">Punkt pierwszy</span></li>
+<li style="color: rgb(182,38,141); "><span style="color: rgb(182,38,141); ">Punkt drugi</span></li>
+<li style="color: rgb(76,142,228); "><span style="color: rgb(76,142,228); ">Punkt trzeci</span></li>
 </ol>
+
+
+</body>
+</html>
