--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 <a href="z17_p2_kod_bork.html" target="strony">Z17_p2</a>
 <br>
 <a href="z18_kod_bork.html" target="strony">Z18</a>
-
+<br>
+<a href="z19_kod_bork.html" target="strony">Z19</a>
 
 </td>
     </tr>
