--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 <br>
 <a href="z21_bork.html" target="strony">Zad21 </a>
 <br>
+<a href="z22_bork.html" target="strony">Zad22 </a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
@@ -82,7 +84,8 @@
 <a href="z18_kod_bork.html" target="strony">Z18</a>
 <br>
 <a href="z19_kod_bork.html" target="strony">Z19</a>
-
+<br>
+<a href="z22_kod_bork.html" target="strony">Z22</a>
 </td>
     </tr>
     </table>
