--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 <br>
 <a href="z19_kod_bork.html" target="strony">Z19</a>
 <br>
+<a href="z20_kod_bork.html" target="strony">Z20</a>
+<br>
 <a href="z22_kod_bork.html" target="strony">Z22</a>
 </td>
     </tr>
