--- a/z22_bork.html
+++ b/z22_bork.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=UTF-8">
-<LINK href="zad22_bork.css" rel="stylesheet" type="text/CSS">
+<LINK href="z22_bork.css" rel="stylesheet" type="text/CSS">
 </head>
 <body>
 <p>
