--- a/z22_kod_bork.html
+++ b/z22_kod_bork.html
@@ -3,7 +3,7 @@
 <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=UTF-8">
 <h1> KOD HTML </h1>
 <textarea>
-<LINK href="zad22_bork.css" rel="stylesheet" type="text/CSS">
+<LINK href="z22_bork.css" rel="stylesheet" type="text/CSS">
 </head>
 <body>
 <p>
