--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 <br>
 <a href="z22_bork.html" target="strony">Zad22 </a>
 <br>
+<a href="zad33_bork.html" target="strony">Zad33 </a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
@@ -88,6 +90,8 @@
 <a href="z20_kod_bork.html" target="strony">Z20</a>
 <br>
 <a href="z22_kod_bork.html" target="strony">Z22</a>
+<br>
+<a href="zad33_kod_bork.html" target="strony">Z33</a>
 </td>
     </tr>
     </table>
