--- a/zad34_bork.html
+++ b/zad34_bork.html
@@ -38,8 +38,23 @@ selektor {border-left-color: fuchsia;}
  </style>
  </head>
  <body>
- <h1>tu wpisz twoje nazwisko</h1>
- <h2>tu wpisz twoje imię</h2>
- <h3>tutaj wpisz klasę i grupę oraz dzisiejszą datę</h3>
+ <h1>Borkowski 
+ width: 200px; height:2,5cm;
+ padding: 50px; margin: 40px;
+ border: 4px solid;
+ background : rgb(65,65,65);
+ </h1>
+ <h2>Marcel 
+ width: 300pt; height:2cm;
+ padding: 30px; margin-left: 340px;
+ border: 7px dashed silver;
+ background : rgb(0,255,0);
+ </h2>
+ <h3>Nr 1 F3g1 
+ width: 400px; height:3cm;
+ padding: 20px; margin-left: 710px;
+ border: 10px solid;
+ background : rgb(100,100,100);
+ </h3>
  </body>
 </html>
