--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 <br>
 <a href="zad33_bork.html" target="strony">Zad33 </a>
 <br>
+<a href="zad34_bork.html" target="strony">Zad34 </a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
