--- a/zad34_bork.html
+++ b/zad34_bork.html
@@ -9,7 +9,7 @@
  width: 200px;
  height:2,5cm;
  padding : 50px;
- margin-left : 680px;
+ margin-right : 500 px;
  border : 4px solid;
 selektor {border-top-color: black;}
 selektor {border-botom-color: gray;}
