--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 <a href="z22_kod_bork.html" target="strony">Z22</a>
 <br>
 <a href="zad33_kod_bork.html" target="strony">Z33</a>
+<br>
+<a href="zad34_kod_bork.html" target="strony">Z34</a>
 </td>
     </tr>
     </table>
