--- a/zad36_bork.html
+++ b/zad36_bork.html
@@ -3,26 +3,15 @@
    <head> 
 
  <meta charset="utf-8" /> 
-    <style type="text/css"> 
-  body{ 
-                  background-color: rgb(100,200,150); 
-     text-align : center; 
-                  margin     : 50px; 
- } 
-div { 
-        background : rgb(100,128,255); 
-        width      : 400px; 
-        border     : 3px black solid; 
-    } 
- h1 { 
-        margin     : 20px; 
-        border     : 1px solid black; 
-        background : rgb(255,255,0); 
-    } 
-    
-    </style> 
-  </head> 
+<LINK href="zad36_bork.css" rel="stylesheet" type="text/CSS"> 
+   </head>
 <body> 
-<div><h1>tutaj wpisz twoje nazwisko i klasę</h1></div> 
+ 
+<div><h1>Borkowski 3F</h1></div> 
+<hr>
+<div><h2>Borkowski 3F</h2></div> 
+<hr>
+<div><h2>Borkowski 3F</h2></div> 
+<hr>
 </body> 
 </html>
