--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 <br>
 <a href="zad34_bork.html" target="strony">Zad34 </a>
 <br>
+<a href="zad35_bork.html" target="strony">Zad35 </a>
+<br>
+<a href="zad36_bork.html" target="strony">Zad36 </a>
+<br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>       
@@ -96,6 +100,9 @@
 <a href="zad33_kod_bork.html" target="strony">Z33</a>
 <br>
 <a href="zad34_kod_bork.html" target="strony">Z34</a>
+<br>
+<a href="zad36_bork.css" target="strony">Z36 </a>
+
 </td>
     </tr>
     </table>
