--- a/zad34_bork.html
+++ b/zad34_bork.html
@@ -8,13 +8,13 @@
  h1 { 
  width: 200px;
  height:2,5cm;
- padding : 50px;
- margin-right : 300 px;
- border : 4px solid;
-selektor {border-top-color: black;}
-selektor {border-botom-color: gray;}
-selektor {border-right-color: red;}
-selektor {border-left-color: fuchsia;}
+ padding: 50px;
+ margin-left: 750 px;
+ border: 4px solid;
+{border-top-color: black;}
+ {border-botom-color: gray;}
+ {border-right-color: red;}
+ {border-left-color: fuchsia;}
 
  background : rgb(65,65,65);
  }
@@ -22,18 +22,18 @@ selektor {border-left-color: fuchsia;}
  h2 { 
  width: 300pt;
  height:2cm;
- padding : 30px;
- margin-left : 250px;
- border : 7px dashed silver;
- background : rgb(0,255,0);
+ padding: 30px;
+ margin-left: 250px;
+ border: 7px dashed silver;
+ background: rgb(0,255,0);
  }
  h3 { 
  width: 400px;
  height:3cm;
- padding : 20px;
- margin-left : 710px;
- border : 10px double grey;
- background : rgb(100,100,100);
+ padding: 20px;
+ margin-left: 710px;
+ border: 10px double grey;
+ background: rgb(100,100,100);
  }
  </style>
  </head>
